@@ -22,6 +22,11 @@ MSW 2006-02-27
 
 ------------------------------------------------------------------------------
 
+common/p_cmd.c: Update command table for auto-completion to all (non-DM)
+   server side commands. Also check for client side commands. Add a space
+   after a completed command so the player can enter arguments.
+Andreas Kirschbaum 2006-03-04
+
 Fix bug #1442523 (Crash when pressing TAB during login). Also fix undefined
 behavior due to overlapping strings passed to strncpy().
 common/p_cmd.c: In complete_command() remove hack for x11 client and return
